<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nasa</string>
    <string name="action_settings">Settings</string>

    <string name="nasa_image_content_description">Imagem Mágica da Nasa</string>
    <string name="nasa_image_title">Imagem Nasa</string>
    <string name="nasa_image_description">Descrição Mágica invocada pelo satanas para fazer essa imagem parecer bonita, blablabla pudim dragão bola de fogo. Vou te enterrar na areia, nãonão, vou atolar.</string>
    <string name="nasa_image_date">Mon, 27 Dec 2010 00:00:00 EST</string>
    
    <string name="refresh">Atualizar</string>
    <string name="use_as_background">Utilizar como Wallpaper</string>
</resources>
