<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <ScrollView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1">

		<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
    
    		<TextView
        		android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nasa_image_title"/>
    
    		<TextView
        		android:id="@+id/date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nasa_image_date"/>
    
    		<ImageView
        		android:id="@+id/image"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:contentDescription="@string/nasa_image_content_description"
        		android:src="@drawable/nasa_image"
        		android:adjustViewBounds="true"/>
    
    		<TextView
   	    		android:id="@+id/description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nasa_image_description"/>
		
		</LinearLayout>
	</ScrollView>
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff8d8d8d"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_weight="0"
        android:gravity="center_horizontal">
		<Button android:text="@string/refresh"
		    android:onClick="refresh"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
		<Button android:text="@string/use_as_background"
		    android:onClick="changeWallpaper"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
        
    </LinearLayout>
</LinearLayout>